--- a/tourArmenia-web/src/main/resources/templates/index.html
+++ b/tourArmenia-web/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
         <link href="/assets/plugins/menuzord/css/menuzord-animations.css" rel="stylesheet">
 
         <link href='/assets/plugins/isotope/isotope.min.css' rel='stylesheet'>
-        <link href='/assets/plugins/fancybox/jquery.fancybox.min.css' rel='stylesheet'>
+        <link href='/assets/plugins/fan1cybox/jquery.fancybox.min.css' rel='stylesheet'>
 
         <link href='/assets/plugins/selectric/selectric.css' rel='stylesheet'>
         <link href='/assets/plugins/daterangepicker/css/daterangepicker.css' rel='stylesheet'>
@@ -40,9 +40,8 @@
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
-
 </head>
-<body id="body" class="up-scroll" data-spy="scroll" data-target=".element-right-sidebar">
+<body id="body" class="up-scroll" data-spy="scroll" data-target=".element-right-sidebar" >
 
 
 <!-- ====================================
@@ -82,10 +81,10 @@
 
                 <ul class="menuzord-menu menuzord-right">
                     <li class=" active ">
-                        <a class="" href="javascript:void(0)">Home</a>
+                        <a class="" href="javascript:void(0)" th:text="#{idex.HOME}"></a>
                         <ul class="dropdown drop-up">
                             <li class=" active ">
-                                <a href="/static">Home Main</a>
+                                <a href="/" th:text="#{index.main}"></a>
                             </li>
                         </ul>
                     </li>
@@ -97,17 +96,17 @@
 
                                 <div class="col4">
                                     <ul class="list-unstyled">
-                                        <li>Tour Packages List View</li>
+                                        <li th:text="#{index.tourView}"></li>
                                         <li class="">
                                             <a href="/tour" th:text="#{index.tourList}"></a>
                                         </li>
 
-                                        <li class="">
-                                            <a href="packages-list-right-sidebar.html">Packages Sidebar Right</a>
+                                        <li class="" th:text="#{index.tourBooking}">
+
                                         </li>
 
                                         <li class="">
-                                            <a href="packages-list.html">Packages List</a>
+                                            <a href="/booking/createCustomTour" th:text="#{index.booking}"></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -121,7 +120,7 @@
 
                                 <div class="col3">
                                     <ul class="list-unstyled">
-                                        <li>Hotels List View</li>
+                                        <li th:text="#{index.hotels}"></li>
                                         <li class="">
                                             <a href="/item" th:text="#{index.hotelsList}"></a>
                                         </li>
@@ -193,7 +192,7 @@
                                     <a href="javascript:void(0)" th:text="#{index.ADMIN}"></a>
                                     <ul id="admin" class="dropdown drop-up">
                                         <li class="">
-                                            <a href="/admin">Admin</a>
+                                            <a href="/admin" th:text="#{index.ADMIN}"></a>
                                         </li>
 
 
@@ -226,6 +225,7 @@
                                     </form>
                                 </li>
                 </ul>
+
             </div>
         </div>
     </nav>
@@ -430,79 +430,30 @@
     <!-- ====================================
     ———	TOP DEALS SECTION
     ===================================== -->
-    <section class="bg-smoke py-8 py-lg-9">
+<!-- ====================================
+      ———	ABOUT ITEM SECTION
+      ===================================== -->
+<section class="page-title">
+    <div class="page-title-img bg-img bg-overlay-darken" style="background-image: url(/assets/img/pages/republic-square-night.zb3ayjxb.514-e1564047517763-600x410.jpg);">
         <div class="container">
-            <div class="text-center section-title">
-                <h2 class="text-uppercase font-weight-bold position-relative">
-        <span class="bg-smoke">
-          Our top deals
-        </span>
-                </h2>
-            </div>
-
-            <div class="row justify-content-center">
-                <div class="col-md-6 col-lg-4" th:each="tour:${tours}">
-                    <div class="card card-hover mb-5 mb-lg-0">
-                        <a th:href="@{'/tour/index' +${tour.id}}" class="position-relative">
-                            <img th:if="${tour.picName != null}" th:src="@{/getImage(imageName=${tour.picName})}" width="400"/>  alt="Card image cap" </a>
-
-                            <div class="card-img-overlay card-hover-overlay rounded-top d-flex flex-column">
-                                <div class="badge badge-primary badge-rounded-circle">
-                <span class="d-block">
-                  50%<br>off
-                </span>
-                                </div>
-
-                                <ul class="list-unstyled d-flex mt-auto text-warning">
-                                    <li>
-                                        <i class="fa fa-star mr-1" aria-hidden="true"></i>
-                                    </li>
-                                    <li>
-                                        <i class="fa fa-star mr-1" aria-hidden="true"></i>
-                                    </li>
-                                    <li>
-                                        <i class="fa fa-star mr-1" aria-hidden="true"></i>
-                                    </li>
-                                    <li>
-                                        <i class="fa fa-star mr-1" aria-hidden="true"></i>
-                                    </li>
-                                    <li>
-                                        <i class="fa fa-star" aria-hidden="true"></i>
-                                    </li>
-                                </ul>
-
-                                <ul class="list-unstyled d-flex text-white font-weight-bold mb-0">
-                                    <li class="border-right border-white pr-2">7 days</li>
-                                    <li class="border-right border-white px-2">15 hrs</li>
-                                    <li class="pl-2">15 min</li>
-                                </ul>
-                            </div>
-                        </a>
-
-                        <div class="card-body">
-                            <h5>
-                                <a href="single-package-left-sidebar.html" class="card-title text-uppercase">Suspendisse Blandit</a>
-                            </h5>
-                            <p class="mb-5">Integer purus ex, dictum nec elementum eu, tristique vel lectus. Donec rutrum lectus et pharetra egestas.</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div>
-                                    <p class="mb-0 text-capitalize">Start from</p>
-                                    <h3 class="text-primary">$299</h3>
-                                </div>
-
-                                <div>
-                                    <a href="booking-step-1.html" class="btn btn-sm btn-outline-secondary text-uppercase">Book Now</a>
-                                </div>
-                            </div>
+            <div class="row align-items-center justify-content-center" style="height: 650px; width: auto" >
+                <div class="col-lg-6">
+                    <div class="page-title-content">
+                        <div class="">
+                            <h2 class="text-uppercase text-white font-weight-bold"></h2>
                         </div>
+                        <p class="text-white mb-0"></p>
                     </div>
                 </div>
-</setion>
+            </div>
+        </div>
+    </div>
+</section>
 
 
-    <!-- ====================================
-    ———	COUNTER SECTION
-    ===================================== -->
+            <!-- ====================================
+            ———	COUNTER SECTION
+            ===================================== -->
 
 
 </div><!-- element wrapper ends -->
@@ -520,7 +471,7 @@
     <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header rounded">
-                <h3 class="modal-title text-uppercase font-weight-bold">Create your account</h3>
+                <h3 class="modal-title text-uppercase font-weight-bold" th:text="#{index.createAccount}"></h3>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -529,7 +480,7 @@
             </div>
 
             <div class="modal-footer justify-content-center">
-                <p class="mb-1">Don’t have an Account? <a href="/user/register" th:if="${currentUser==null}" th:text="#{index.signUp}"></a></p>
+                <p class="mb-1"><span th:text="#{index.Account}"></span> <a href="/user/register" th:if="${currentUser==null}" th:text="#{index.signUp}"></a></p>
             </div>
         </div>
     </div>
@@ -537,7 +488,7 @@
 
 
             <div class="modal-footer justify-content-center">
-                <p class="mb-1">Don’t have an Account? <a href="/user/register" th:if="${currentUser==null}" th:text="#{index.signUp}"></a></p>
+                <p class="mb-1" th:text="#{index.Account}"> <a href="/user/register" th:if="${currentUser==null}" th:text="#{index.signUp}"></a></p>
             </div>
         </div>
     </div>
