--- a/tourArmenia-web/src/main/resources/templates/region.html
+++ b/tourArmenia-web/src/main/resources/templates/region.html
@@ -45,13 +45,13 @@
 ———	PAGE TITLE
 ===================================== -->
 <section class="page-title">
-  <div class="page-title-img bg-img bg-overlay-darken" style="background-image: url(assets/img/pages/page-title-bg12.jpg);">
+  <div class="page-title-img bg-img bg-overlay-darken" style="background-image: url(/assets/img/pages/page-title-bg12.jpg);">
     <div class="container">
       <div class="row align-items-center justify-content-center" style="height: 200px;">
         <div class="col-lg-6">
           <div class="page-title-content">
             <div class="">
-              <h2 class="text-uppercase text-white font-weight-bold">Armenia Hotels</h2>
+              <h2 class="text-uppercase text-white font-weight-bold" th:text="#{region}"></h2>
             </div>
             <p class="text-white mb-0"></p>
           </div>
@@ -61,7 +61,6 @@
   </div>
 </section>
 
-===================================== -->
 <section class="bg-smoke py-10">
   <div class="container">
     <div class="row">
@@ -74,29 +73,17 @@
         </div>
 
         <div class="row">
-          <div class="col-md-6 col-lg-4 mb-5" th:each="item:${items}">
-            <div class="card card-hover">
-              <a th:href="@{'item/'+${item.id}}" class="position-relative">
-                <img th:if="${item.getPicName()!= null}" th:src="@{/getImage(imageName=${item.getPicName()})}" width="300" height="250Boo"/></a>
-              </a>
+          <div class="col-md-6 col-lg-4 mb-5" th:each="region : ${regions}">
+            <div class="card card-hover" >
+              <a th:href="@{'/regions/' + ${region.id}}" class="position-relative">
+                <span th:text="${region.name}"></span>
+                  </a>
 
               <div class="card-body">
-                <h5 th:text="${item.getName()}">
-                  <a href="single-hotel-right-sidebar.html" class="card-title text-uppercase">Park Hotel</a>
+                <h5 th:text="${region.regionalCenter}">
                 </h5>
 
-                <p  th:text="${item.region.getName()}" class="mb-7"></p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div>
-                    <p class="mb-0 text-capitalize">Per night</p>
-                    <h3  th:text="${item.getDescription()}" class="text-primary">$25</h3>
-                  </div>
 
-                  <div>
-                    <a th:href="@{/admin/removeHotel(id=${item.id})}" class="btn btn-xs btn-outline-secondary text-uppercase">Delete</a><br>
-                    <a th:href="@{/admin/updateItem(id=${item.id})}" class="btn btn-xs btn-outline-secondary text-uppercase">Update</a>
-
-                  </div>
                 </div>
               </div>
             </div>
@@ -259,7 +246,7 @@
 <script src="/assets/plugins/smoothscroll/SmoothScroll.js"></script>
 
 <script src="/assets/js/star.js"></script>
-<link href="assets/options/optionswitch.css" rel="stylesheet">
+<link href="/assets/options/optionswitch.css" rel="stylesheet">
 <script src="/assets/options/optionswitcher.js"></script>
 </body>
 </body>
@@ -288,14 +275,13 @@
     <th>id</th>
      <th>name</th>
     <th>RegionalCenter</th>
-    <th>Action</th>
+
   </tr>
   <tr th:each="region : ${regions}">
     <td th:text="${region.id}"></td>
     <td><a th:href="@{'/regions/' + ${region.id}}"> <span th:text="${region.name}"></span></a></td>
     <td th:text="${region.regionalCenter}"></td>
-    <td><a th:href="@{/admin/updateRegion(id=${region.id})}" class="btn btn-xs btn-outline-secondary text-uppercase">Update</a>
-    </td>
+      </td>
   </tr>
 </table>
 <a href="/">Back</a>
