--- a/tourArmenia-web/src/main/resources/templates/tour.html
+++ b/tourArmenia-web/src/main/resources/templates/tour.html
@@ -2,6 +2,305 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <title>Hotels</title>
+    <th:block>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <title>Hotel Fullwidth Grid View - Star Travel</title>
+
+        <!-- Plugins css Style -->
+        <link href="/assets/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+        <link href="/assets/plugins/animate/animate.css" rel="stylesheet">
+        <link href="/assets/plugins/menuzord/css/menuzord.css" rel="stylesheet">
+        <link href="/assets/plugins/menuzord/css/menuzord-animations.css" rel="stylesheet">
+
+
+        <link href='/assets/plugins/fancybox/jquery.fancybox.min.css' rel='stylesheet'>
+
+        <link href='/assets/plugins/selectric/selectric.css' rel='stylesheet'>
+        <link href='../../css?family=Montserrat:400,500,600,700' rel='stylesheet'>
+
+        <!-- CUSTOM CSS -->
+        <link href="/assets/css/star.css" id="option_style" rel="stylesheet">
+
+
+        <!-- FAVICON -->
+        <link rel="shortcut icon" type="image/png" href="/assets/img/favicon.png">
+
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
+    </th:block>
+</head>
+<body>
+<div th:include="fragment/header::headerFragment">
+</div>
+
+
+<!-- ====================================
+———	PAGE TITLE
+===================================== -->
+<section class="page-title">
+    <div class="page-title-img bg-img bg-overlay-darken" style="background-image: url(/assets/img/pages/page-title-bg12.jpg);">
+        <div class="container">
+            <div class="row align-items-center justify-content-center" style="height: 200px;">
+                <div class="col-lg-6">
+                    <div class="page-title-content">
+                        <div class="">
+                            <h2 class="text-uppercase text-white font-weight-bold" th:text="#{region}"></h2>
+                        </div>
+                        <p class="text-white mb-0"></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="bg-smoke py-10">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="mb-md-6">
+                    <div class="row align-items-center">
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6 col-lg-4 mb-5" th:each="tour:${tours}">
+                    <div class="card card-hover">
+                        <a th:href="@{'tour/'+${tour.id}}" class="position-relative">
+                            <img th:if="${tour.getPicName()!= null}" th:src="@{/getImage(imageName=${tour.getPicName()})}" width="300" height="250Boo"/></a>
+                        </a>
+
+                        <div class="card-body">
+                            <h5 th:text="${tour.getName()}">
+                                <a href="single-hotel-right-sidebar.html" class="card-title text-uppercase">Park Hotel</a>
+                            </h5>
+
+                            <p  th:text="${tour.region.getName()}" class="mb-7"></p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div>
+                                    <p class="mb-0 text-capitalize">Per night</p>
+                                    <h3  th:text="${tour.price}" class="text-primary">$25</h3>
+                                </div>
+
+                                <div>
+                                    <a th:href="@{/admin/removeHotel(id=${tour.id})}" class="btn btn-xs btn-outline-secondary text-uppercase">Delete</a><br>
+                                    <a th:href="@{/admin/updateItem(id=${tour.id})}" class="btn btn-xs btn-outline-secondary text-uppercase">Update</a>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div><!-- element wrapper ends -->
+
+        <!-- ====================================
+        ——— FOOTER SECTION
+        ===================================== -->
+        <th:block th:include="fragment/header::footerFragment">
+        </th:block>
+
+        <!-- ====================================
+        ——— MODAL SECTION
+        ===================================== -->
+        <!-- Signup Modal -->
+        <div class="modal fade" id="signup" tabindex="-1" role="dialog" aria-label="signupModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header rounded">
+                        <h3 class="modal-title text-uppercase font-weight-bold">Create your account</h3>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <form class="" action="index.html" method="post">
+                            <div class="form-group">
+                                <input type="text" class="form-control bg-smoke" required="" placeholder="Full Name">
+                            </div>
+
+                            <div class="form-group">
+                                <input type="email" class="form-control bg-smoke" required="" placeholder="Email">
+                            </div>
+
+                            <div class="form-group">
+                                <input type="password" class="form-control bg-smoke" required="" placeholder="Password">
+                            </div>
+
+                            <div class="form-group form-check mb-0">
+                                <input type="checkbox" class="form-check-input" id="exampleCheck4">
+                                <label class="form-check-label text-gray-color mb-3" for="exampleCheck4">
+                                    I agree to the terms of use and privacy.
+                                </label>
+                            </div>
+
+                            <button type="submit" class="btn btn-primary btn-block text-uppercase">Login</button>
+
+                            <div class="text-uppercase text-center py-3">Or</div>
+
+                            <button type="submit" class="btn btn-facebook btn-block text-uppercase">Login with facebook</button>
+                        </form>
+                    </div>
+
+                    <div class="modal-footer justify-content-center">
+                        <p class="mb-1">Don’t have an Account? <a href="javascript:void(0)">Sign up</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Login Modal -->
+        <div class="modal fade" id="login" tabindex="-1" role="dialog" aria-label="loginModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header rounded">
+                        <h3 class="modal-title text-uppercase font-weight-bold">Log in to your account</h3>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <form class="" action="index.html" method="post">
+                            <div class="form-group">
+                                <input type="email" class="form-control bg-smoke" required="" placeholder="Email">
+                            </div>
+
+                            <div class="form-group">
+                                <input type="password" class="form-control bg-smoke" required="" placeholder="Password">
+                            </div>
+
+                            <div class="form-group form-check mb-0">
+                                <input type="checkbox" class="form-check-input" id="exampleCheck5">
+                                <label class="form-check-label text-gray-color mb-3" for="exampleCheck5">
+                                    Remember me
+                                </label>
+                                <a class="pull-right" href="javascript:void(0)">Fogot Password?</a>
+                            </div>
+                            <button type="submit" class="btn btn-primary btn-block text-uppercase">Login</button>
+                            <div class="text-uppercase text-center py-3">Or</div>
+                            <button type="submit" class="btn btn-facebook btn-block text-uppercase">Login with facebook</button>
+                        </form>
+                    </div>
+
+                    <div class="modal-footer justify-content-center">
+                        <p class="mb-1">Don’t have an Account? <a href="javascript:void(0)">Sign up</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- INQUIRY IN MODAL -->
+        <div class="modal fade" id="inquiry" tabindex="-1" role="dialog" aria-label="inquiryModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header rounded">
+                        <h3 class="modal-title text-uppercase font-weight-bold">Inquiry about tour</h3>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body pb-3">
+                        <form class="" action="index.html" method="post">
+                            <div class="form-group">
+                                <input type="text" class="form-control bg-smoke" required="" placeholder="Your Name">
+                            </div>
+
+                            <div class="form-group">
+                                <input type="email" class="form-control bg-smoke" required="" placeholder="Your Email">
+                            </div>
+
+                            <div class="form-group">
+                                <input type="number" class="form-control bg-smoke" required="" placeholder="Phone Number">
+                            </div>
+
+                            <div class="form-group">
+                                <textarea class="form-control bg-smoke" rows="6" placeholder="Message"></textarea>
+                            </div>
+
+                            <button type="submit" class="btn btn-primary text-uppercase">Submit</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Javascript -->
+        <script src="/assets/plugins/jquery/jquery-3.4.1.min.js"></script>
+        <script src="/assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <script src="/assets/plugins/menuzord/js/menuzord.js"></script>
+
+
+
+        <script src='/assets/plugins/fancybox/jquery.fancybox.min.js'></script>
+
+        <script src='/assets/plugins/selectric/jquery.selectric.min.js'></script>
+
+
+
+        <script src="/assets/plugins/lazyestload/lazyestload.js"></script>
+
+
+        <script src="/assets/plugins/smoothscroll/SmoothScroll.js"></script>
+
+        <script src="/assets/js/star.js"></script>
+        <link href="/assets/options/optionswitch.css" rel="stylesheet">
+        <script src="/assets/options/optionswitcher.js"></script>
+</body>
+</body>
+</html>
+<!--
+</body>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head>
+  <meta charset="UTF-8">
+  <title>Regions</title>
+  <th:block th:include="fragment/header::headerFragment"></th:block>
+
+</head>
+<body>
+<div id="language" style="color: red" >
+  <a href="?lang=hy">հայերեն</a>
+  <a href="?lang=ru">Русский</a>
+  <a href="?lang=en">English</a>
+</div>
+<h1>Regions</h1>
+<table border="1px">
+  <tr>
+    <th>id</th>
+     <th>name</th>
+    <th>RegionalCenter</th>
+
+  </tr>
+  <tr th:each="region : ${regions}">
+    <td th:text="${region.id}"></td>
+    <td><a th:href="@{'/regions/' + ${region.id}}"> <span th:text="${region.name}"></span></a></td>
+    <td th:text="${region.regionalCenter}"></td>
+      </td>
+  </tr>
+</table>
+<a href="/">Back</a>
+</body>
+</html>
+-->
+
+<!--
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="UTF-8">
     <title>Tours</title>
 </head>
 <body>
@@ -46,8 +345,8 @@
         </td>
         <td th:text="${tour.startDate}"></td>
         <td th:if="${currentUser.UserType == 'ADMIN'}"><a th:href="@{/tour/remove(id=${tour.id})}">Remove</a></td>
-<!--        <td> <a th:href="@{'/tour/' + ${tour.id}}">More</a>-->
-<!--        </td>-->
+       <td> <a th:href="@{'/tour/' + ${tour.id}}">More</a>
+        </td>
         <td><a th:href="@{/admin/removeTour(id=${tour.id})}">Remove</a><br>
             <a th:href="@{/admin/updateTour(id=${tour.id})}">Update</a>
         </td>
@@ -64,4 +363,4 @@
     </div>
 </div>
 </body>
-</html>
+</html>-->
