validation and exception handling

--- a/tourArmenia-web/src/main/resources/templates/tour.html
+++ b/tourArmenia-web/src/main/resources/templates/tour.html
@@ -51,7 +51,7 @@
                 <div class="col-lg-6">
                     <div class="page-title-content">
                         <div class="">
-                            <h2 class="text-uppercase text-white font-weight-bold" th:text="#{region}"></h2>
+                            <h2 class="text-uppercase text-white font-weight-bold" th:text="#{index.TOURS}"></h2>
                         </div>
                         <p class="text-white mb-0"></p>
                     </div>
