--- a/tourArmenia-web/src/main/resources/templates/updateCar.html
+++ b/tourArmenia-web/src/main/resources/templates/updateCar.html
@@ -7,7 +7,7 @@
 <body>
 <a href="/cars">Back</a>
 <form action="/admin/updateCar" method="post" enctype="multipart/form-data">
-    <input type="text" id="id" name="id"/><br>
+    Car id<input type="text" id="id" name="id"/><br>
  Name: <input type="text" id="name" name="name"/>
     <br>
   Seats: <input type="text" id="seats" name="seats"/>
