--- a/tourArmenia-web/src/main/resources/templates/admin.html
+++ b/tourArmenia-web/src/main/resources/templates/admin.html
@@ -62,6 +62,18 @@
 </section>
 
 ===================================== -->
+<h1>
+<a href="/admin/addRegion" th:text="#{admin.region}"></a><br><br>
+<a href="/admin/addItem" th:text="#{admin.item}"></a><br><br>
+    <a href="/admin/updateItem" th:text="#{update.item}"></a><br><br>
+<a href="/admin/addTour" th:text="#{admin.tour}"></a><br><br>
+    <a href="/admin/updateTour" th:text="#{update.tour}"></a><br><br>
+<a href="/admin/addCar" th:text="#{admin.car}"></a><br><br>
+<a href="/admin/updateCar" th:text="#{update.car}"></a>
+</h1>
+
+
+</h1>
 <section class="bg-smoke py-10">
     <div class="container">
         <div class="row">
