--- a/tourArmenia-web/src/main/resources/templates/booking.html
+++ b/tourArmenia-web/src/main/resources/templates/booking.html
@@ -85,6 +85,10 @@
     </style>
 </head>
 <body>
+<h2><p style="background-color: #ea6f00"> Please check your email to verify your booking</p></h2>
+
+
+
 <div class="booking-form">
     <h1>Book Your Adventure</h1>
     <form action="/booking/createCustomTour" method="post">
