--- a/tourArmenia-web/src/main/resources/templates/fragment/header.html
+++ b/tourArmenia-web/src/main/resources/templates/fragment/header.html
@@ -72,7 +72,7 @@
 
           <ul class="menuzord-menu menuzord-right">
             <li class=" active ">
-              <a class="" href="javascript:void(0)" th:text="#{idex.HOME}"></a>
+              <a class="" href="/" th:text="#{idex.HOME}"></a>
               <ul class="dropdown drop-up">
                 <li class=" active ">
                   <a href="/" th:text="#{index.main}"></a>
@@ -81,7 +81,7 @@
             </li>
 
             <li class="">
-              <a href="javascript:void(0)" th:text="#{index.TOURS}"></a>
+              <a href="/tour" th:text="#{index.TOURS}"></a>
               <div class="megamenu drop-up">
                 <div class="megamenu-row">
 
@@ -104,8 +104,9 @@
                 </div>
             </li>
 
+
             <li class="">
-              <a href="javascript:void(0)" th:text="#{index.HOTELS}"></a>
+              <a href="/" th:text="#{index.HOTELS}"></a>
               <div class="megamenu drop-up">
                 <div class="megamenu-row">
 
