--- a/tourArmenia-web/src/main/resources/templates/admin.html
+++ b/tourArmenia-web/src/main/resources/templates/admin.html
@@ -63,6 +63,7 @@
 
 ===================================== -->
 <h1>
+    <a href="/admin/bookings">Bookings</a><br><br>
 <a href="/admin/addRegion" th:text="#{admin.region}"></a><br><br>
 <a href="/admin/addItem" th:text="#{admin.item}"></a><br><br>
     <a href="/admin/updateItem" th:text="#{update.item}"></a><br><br>
